# Template-V3

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_github_secrets.md
.github/: constants.env  pull_request_template.md
.github/workflows/: Deploy.yml  SyncingTwoRepo.yml  auto-clang-format.yml  ci.yml  codeql-analysis.yml
cmake/: InterproceduralOptimization.cmake  PackageProject.cmake
src/: CMakeLists.txt  entity.cpp  entity.hpp  factorial.cpp  factorial.hpp  main.cpp  sparse_array.hpp
test/: CMakeLists.txt  tests.cpp
